--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
       </div>
       <div class="actions">
         <button class="btn icon primary" id="addTaskBtn" aria-haspopup="dialog">➕ Add Task</button>
+        <button class="btn icon" id="createInvoiceBtn" aria-haspopup="dialog">🧾 Create Invoice</button>
         <button class="btn icon ghost" id="bulkDeleteBtn" title="Delete selected">🗑️ Bulk Delete</button>
         <button class="btn icon ghost" id="exportCsvBtn">⬇️ Export CSV</button>
-        <button class="btn icon ghost" id="resetDemoBtn" title="Loads demo data to Workspace">🧪 Load Demo</button>
+        <button class="btn icon ghost" id="resetDemoBtn" title="Loads demo data">🧪 Load Demo</button>
+        <button class="btn icon ghost" id="debugToggleBtn" title="Toggle debug logs">🐞 Debug</button>
       </div>
     </header>
 
@@ -322,6 +324,7 @@
     </footer>
   </div>
 </div>
+
 
 
   <!-- Hidden A4 Invoice Template (render target for PDF) -->
