Implement client and task title dropdowns with custom input options

--- a/index.html
+++ b/index.html
@@ -175,12 +175,26 @@
         <div class="body">
           <div class="dialog grid2">
             <div>
-              <label>Client Name</label>
-              <input required id="fClient" placeholder="Client / Entity" />
-            </div>
+  <label>Client Name</label>
+  <select id="fClientSelect" class="select" aria-label="Client (existing)">
+    <option value="">Select Client</option>
+  </select>
+  <!-- Shown only when "New client…" is selected -->
+  <input id="fClientNew" placeholder="Enter new client" style="display:none;margin-top:6px;" />
+  <!-- Hidden value used for form submission compatibility -->
+  <input id="fClient" type="hidden" />
+  <small class="hint">Pick an existing client, or choose “New client…” to type a fresh one.</small>
+</div>
             <div>
               <label>Task Title</label>
-              <input required id="fTitle" placeholder="e.g., GSTR‑1 Filing" />
+              <select id="fTitleSelect" class="select" aria-label="Task Title (existing)">
+                <option value="">Select Title</option>
+              </select>
+              <!-- Shown only when "New title…" is selected -->
+              <input id="fTitleNew" placeholder="Enter new title" style="display:none;margin-top:6px;" />
+              <!-- Hidden value used for form submission compatibility -->
+              <input id="fTitle" type="hidden" />
+              <small class="hint">Pick an existing title, or choose “New title…” to type a fresh one.</small>
             </div>
             <div>
               <label>Priority</label>
