--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div id="serviceRows"></div>
             <div class="inv-totals">
               <div class="tot-row"><span>Sub Total</span><span class="money">₹ <span id="subTotal">0</span></span></div>
-              <div class="tot-row"><label for="discountInput">Less: Discount</label><input id="discountInput" type="number" min="0" step="0.01" value="0"></div>
+              <div class="tot-row"><label for="discountInput">Less: Advance</label><input id="discountInput" type="number" min="0" step="0.01" value="0"></div>
               <div class="tot-row strong"><span>Invoice Amount</span><span class="money">₹ <span id="grandTotal">0</span></span></div>
               <div class="tot-row words"><small>Amount (in words): <span id="amountWords">Zero Rupees only</span></small></div>
             </div>
@@ -302,7 +302,7 @@
     </div>
   </div>
 
-  <!-- Modal: Edit Invoice (Upload PDF) -->
+  <!-- Modal: Edit Invoice (Upload PD) -->
   <div class="modal" id="editInvoiceModal" role="dialog" aria-modal="true" aria-labelledby="editInvoiceTitle">
   <div class="dialog">
     <header>
@@ -377,7 +377,7 @@
         <tbody data-bind="rows"></tbody>
         <tfoot>
           <tr><th colspan="2" class="right">Sub Total</th><th class="money">₹ <span data-bind="subTotal"></span></th></tr>
-          <tr><th colspan="2" class="right">Less: Discount</th><th class="money">₹ <span data-bind="discount"></span></th></tr>
+          <tr><th colspan="2" class="right">Less: Advance</th><th class="money">₹ <span data-bind="advance"></span></th></tr>
           <tr class="total"><th colspan="2" class="right">Invoice Amount</th><th class="money">₹ <span data-bind="grandTotal"></span></th></tr>
           <tr><td colspan="3" class="words">Invoice Amount (in words): <strong><span data-bind="amountWords"></span></strong></td></tr>
         </tfoot>
