Reoccuring Quarterly added

--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
               <textarea id="fNotes" placeholder="Brief details, documents pending, etc."></textarea>
             </div>
             <div>
-              <label><input type="checkbox" id="fRecurring" /> Recurring monthly</label>
-              <small class="hint">If checked, this becomes a template. The app will auto‑create monthly instances on the same day as the deadline.</small>
+              <label><input type="checkbox" id="fRecurring" /> Recurring monthly</label> <label style="margin-left:16px;"><input type="checkbox" id="fRecurringQ" /> Recurring quarterly</label>
+              <small class="hint">If checked, this becomes a template. The app will auto‑create instances (monthly or quarterly) on the same day as the deadline.</small>
             </div>
           </div>
         </div>
